--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -21,6 +21,8 @@
 
 .product__info-wrapper {
   flex-grow: 1;
+  max-width: 140px;
+  padding-bottom: 20px;
 }
 
 .product__feed-title {
@@ -63,10 +65,10 @@
 @media (min-width: $tablet-width) {
   .product {
     @include container-reset;
-    min-width: 324px;
-    width: 100%;
-    min-height: 431px;
-    padding-bottom: 40px;
+    position: relative;
+    width: 324px;
+    min-height: 100%;
+    padding-bottom: 80px;
     background-color: $background-color;
 
     &--white {
@@ -94,9 +96,11 @@
 
   .product__info-wrapper {
     align-self: flex-start;
+    max-width: none;
     width: 100%;
     padding-right: 36px;
     padding-left: 38px;
+    padding-bottom: 0;
   }
 
   .product__feed-title {
@@ -129,15 +133,18 @@
   }
 
   .product__btn {
+    position: absolute;
     margin-right: auto;
     margin-left: auto;
     max-width: 249px;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
 @media (min-width: $desktop-width) {
   .product {
-    min-width: auto;
     width: 245px;
   }
 
