--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -12,7 +12,7 @@ $main-color--darken-second: #63a73a;
 $red--light: #ff8282;
 $black: #000000;
 $black--light: #444444;
-$black--lighter: #444444;
+$black--lighter: #666666;
 $white: #ffffff;
 $gray--lighter: #f2f2f2;
 $gray--light: #ededed;
@@ -68,3 +68,4 @@ $ico-color--hover: $main-color;
 $placeholder-color: $black--light;
 $fild-color--active: $black--light;
 $fild-color--error: $red--light;
+$burger-color: $black--lighter;
