--- a/source/sass/blocks/сategories.scss
+++ b/source/sass/blocks/сategories.scss
@@ -27,28 +27,23 @@
     border-radius: 50%;
     background-color: $decoration-color;
   }
+}
 
-  &::after {
-    content: "";
-    position: absolute;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
+.categories__ico {
+  position: absolute;
 
-  &--slim::after {
+  &--slim {
     top: 22px;
     left: 30px;
     width: 35px;
     height: 49px;
-    background-image: url("../img/icon-cat-slim.svg");
   }
 
-  &--mass::after {
+  &--mass {
     top: 35px;
     left: 13px;
     width: 67px;
     height: 28px;
-    background-image: url("../img/icon-cat-pro.svg");
   }
 }
 
@@ -118,15 +113,17 @@
       width: 200px;
       height: 200px;
     }
+  }
 
-    &--slim::after {
+  .categories__ico {
+    &--slim {
       top: 80px;
       left: 475px;
       width: 141px;
       height: 194px;
     }
 
-    &--mass::after {
+    &--mass {
       top: 135px;
       left: 412px;
       width: 268px;
@@ -199,15 +196,17 @@
       width: 100px;
       height: 100px;
     }
+  }
 
-    &--slim::after {
+  .categories__ico {
+    &--slim {
       top: 41px;
       left: 65px;
       width: 71px;
       height: 97px;
     }
 
-    &--mass::after {
+    &--mass {
       top: 69px;
       left: 34px;
       width: 134px;
