--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,5 +1,27 @@
 .product {
   @include container;
+
+  &--ico {
+    position: relative;
+    padding-top: 58px;
+  }
+
+  &--ico::after,
+  &--ico::before {
+    position: absolute;
+    content: "";
+    background-color: $ico-color;
+    top: 15px;
+    right: 50%;
+    width: 31px;
+    height: 2px;
+    opacity: 0.2;
+    transform: translateX(50%);
+  }
+
+  &--ico::before {
+    transform: translateX(50%) rotate(90deg);
+  }
 }
 
 .product__content-wrapper {
@@ -90,6 +112,17 @@
       border: 1px solid $border-color;
       background-color: $background-color--clean;
     }
+
+    &--ico {
+      padding-top: 165px;
+    }
+
+    &--ico::after,
+    &--ico::before {
+      top: 84px;
+      width: 61px;
+      height: 2px;
+    }
   }
 
   .product__content-wrapper {
@@ -173,6 +206,10 @@
 @media (min-width: $desktop-width) {
   .product {
     width: 245px;
+
+    &--ico {
+      padding-top: 162px;
+    }
   }
 
   .product__ico {
