--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "mixins.scss";
 @import "global.scss";
 @import "blocks/main.scss";
+@import "blocks/logo-svg.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/main-btn.scss";
 @import "blocks/main-title.scss";
