--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -66,6 +66,9 @@ $btn-shadow--active: $black--opacity-light;
 $ico-color: $black--lighter;
 $ico-color--hover: $main-color;
 $placeholder-color: $black--light;
-$fild-color--active: $black--light;
-$fild-color--error: $red--light;
+$field-color--active: $black--light;
+$field-color--error: $red--light;
+$field-ico--active: $main-color;
+$field-ico--error: $red--light;
+$check-color: $main-color;
 $burger-color: $black--lighter;
