--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,7 +16,7 @@
 @import "blocks/title-decor.scss";
 @import "blocks/container.scss";
 @import "blocks/banner.scss";
-@import "blocks/сategories.scss";
+@import "blocks/categories.scss";
 @import "blocks/about-feed.scss";
 @import "blocks/result.scss";
 @import "blocks/contacts.scss";
@@ -25,9 +25,9 @@
 @import "blocks/product.scss";
 @import "blocks/feed-stats.scss";
 @import "blocks/section-wrapper.scss";
-@import "blocks/аdditional-catalog.scss";
-@import "blocks/аdditional-list.scss";
-@import "blocks/аdditional-product.scss";
+@import "blocks/additional-catalog.scss";
+@import "blocks/additional-list.scss";
+@import "blocks/additional-product.scss";
 @import "blocks/cost.scss";
 @import "blocks/special.scss";
 @import "blocks/program.scss";
