--- a/source/sass/blocks/additional-product.scss
+++ b/source/sass/blocks/additional-product.scss
@@ -16,7 +16,7 @@
 }
 
 @media (min-width: $tablet-width) {
-  .additional-product__info-wrapper {
+  .аdditional-product__info-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -48,7 +48,7 @@
     min-width: 895px;
   }
 
-  .additional-product__info-wrapper {
+  .аdditional-product__info-wrapper {
     max-width: 610px;
     width: 100%;
     margin-bottom: 0;
