--- a/source/sass/blocks/special.scss
+++ b/source/sass/blocks/special.scss
@@ -11,6 +11,12 @@
   background-position: center;
 }
 
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+  .special {
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
+  }
+}
+
 .special__ico {
   width: 56px;
   height: 61px;
